--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ node_modules
 package-lock.json
 
 *.docx
-
+*.docx#
 # Ignore the vendor file at root level and bundle for alternative installation
 /vendor/
 .bundle/
